# ryhti-api-client

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.generated/public/: ryhti_api_client_README.md
.generated/public/.openapi-generator/: FILES
.generated/xroad/: ryhti_api_client_README.md
api_specs/: ryhti-plan-open-api.json  ryhti-plan-public-validate-api.json
docs/: AdditionalInformation.md  AttachmentDocument.md  BindingPlotDivision.md  BindingPlotDivisionCancellationInfo.md  BindingPlotDivisionMatterApi.md  BindingPlotDivisionMatterCreate.md  BindingPlotDivisionMatterDecision.md  BindingPlotDivisionMatterPhase.md  BindingPlotDivisionMatterUpdate.md  BoundaryPoint.md  BuildingOrdinanceApi.md  BuildingOrdinanceAttachmentDocument.md  BuildingOrdinanceOperator.md  CancelledGroupRelations.md  GeoJsonLineStringGeometry.md  HandlingEvent.md  HealthReport.md  HealthReportEntry.md  IdentifierValue.md  InteractionEvent.md  LandUseRestriction.md  LandUseRestrictionAttachmentDocument.md  LandUseRestrictionMatterDecision.md  LandUseRestrictionMatterResponse.md  LandUseRestrictionOperator.md  LanguageString.md  LocalDetailedPlanMatterApi.md  NumericValue.md  OtherPlanMaterial.md  ParticipationAndAssessmentScheme.md  PlanApi.md  PlanAttachmentDocument.md  PlanCancellationInfo.md  PlanEffects.md  PlanMatterCreate.md  PlanMatterPhase.md  PlanMatterPhaseResponse.md  PlanMatterPhaseUriResponse.md  PlanMatterUpdate.md  PlanObjectCancellationInfo.md  (+21 more)
scripts/: copy_generated_client.sh  generate_client.sh
src/ryhti_api_client/: __init__.py
(+376 files in other folders)
